Version 0.9.14 (2014-12-XX)
---------------------------
Common: added dedicated Vagrant setup (#1266)
Common: added Quickstart section to README (#1268)
CloudFront Collector: replaced 1x1 pixel with stable GIF (#1259)
Clojure Collector: bumped to 0.9.1
Clojure Collector: increased Tomcat's HTTP header tolerance to 64kB (#1249)
Clojure Collector: changed 1x1 pixel response to use a stable GIF (#1258)
EmrEtlRunner: bumped to 0.10.0
EmrEtlRunner: removed hyphen from the pattern match for Clojure Collector logs (#1194)
EmrEtlRunner: on job failure, log overall jobflow and individual step statuses (#1153)
Scala Common Enrich: bumped to 0.10.0
Scala Common Enrich: bumped Scala Iglu Client to 0.2.0 (#1222)
Scala Common Enrich: updated SnowplowAdapter to accept payload_data versions above 1-0-0 (#1220)
Scala Common Enrich: updated SnowplowAdapter to make charset=utf-8 optional (#1257)
Scala Common Enrich: added Adapter to pre-process Pingdom events (#1164)
Scala Common Enrich: added Adapter to pre-process PagerDuty events (#1158)
Scala Common Enrich: added Adapter to pre-process Mandrill events (#1061)
Scala Hadoop Enrich: bumped to 0.11.0
Scala Hadoop Enrich: bumped Scala Common Enrich to 0.10.0 (#1223)
Scala Hadoop Enrich: added test job for PingdomAdapter (#1176)
Scala Hadoop Enrich: added test job for PagerdutyAdapter (#1175)
Scala Hadoop Enrich: added test job for MandrillAdapter (#1171)
Scala Hadoop Enrich: added test job for more relaxed payload_data schema matching (#1235)
Scala Hadoop Shred: bumped to 0.3.0
Scala Hadoop Shred: bumped Scala Common Enrich to 0.10.0 (#1236)
Scala Hadoop Shred: bumped Iglu Scala Client to 0.2.0 (#1230)
Scala Hadoop Shred: loosened match criteria for unstructured events and contexts (#1231)
StorageLoader: wrote JSON Path file for com.pingdom/incident_notify_of_close event (#1182)
StorageLoader: wrote JSON Path file for com.pingdom/incident_assign event (#1181)