@@ -1,4 +1,0 @@
-#!/bin/bash
-set -e
-
-echo "Not yet implemented, see https://github.com/snowplow/snowplow/issues/1267"
